Improved tracker UI, added controls for timing/tempo

--- a/config/config.json
+++ b/config/config.json
@@ -40,6 +40,7 @@
     "bpm": 120,
     "swing": 0,
     "stepsPerBar": 8,
+    "timeDivision": 2,
     "loop": true,
     "sampleLibrary": [
       {
